feat: fixed location